--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave</title>
 
-    <link rel="stylesheet" href="styles/techwave.css">
-</head>
-<body>
-    <header>
-        <nav>
+    <link rel="stylesheet" href="styles/techwave.css"> 
 
-        </nav>
-    </header>
+</head>
+<body class="inter-font">
+    <header class="bg-dark site-header">
+    <nav class="navbar display-flex flex-between">
+        <img src="images/navbarlogo.png.png" class="nav-logo">
+
+        <ul class="nav-links display-flex">
+            <li><a class="nav-link" href="">About</a></li>
+            <li><a class="nav-link" href="">Episodes</a></li>
+            <li><a class="nav-link" href="">Host</a></li>
+        </ul>
+
+        <button class="btn btn-primary">Subscribe</button>
+    </nav>
+</header>
     <main>
-        <!-- Banner section -->
+        <!-- Hero section -->
         <section>
 
         </section>
