--- a/index.html
+++ b/index.html
@@ -9,28 +9,90 @@
 
 </head>
 <body class="inter-font">
-    <header class="bg-dark site-header">
+    <!-- navbar -->
+    <header class="bg-dark site-header text-white">
     <nav class="navbar display-flex flex-between">
         <img src="images/navbarlogo.png.png" class="nav-logo">
 
-        <ul class="nav-links display-flex">
-            <li><a class="nav-link" href="">About</a></li>
-            <li><a class="nav-link" href="">Episodes</a></li>
-            <li><a class="nav-link" href="">Host</a></li>
+        <ul class="nav-links display-flex ">
+            <li><a class="nav-link text-white" href="">About</a></li>
+            <li><a class="nav-link text-white" href="">Episodes</a></li>
+            <li><a class="nav-link text-white" href="">Host</a></li>
         </ul>
 
         <button class="btn btn-primary">Subscribe</button>
     </nav>
-</header>
+    </header>
     <main>
         <!-- Hero section -->
-        <section>
+        <section class="hero text-white">
+            <div class="hero-bg-wrap">
+                <img src="images/hero-bg.png" alt="wave background">
+            </div>
 
-        </section>
-        <!-- Podcast section -->
-        <section>
+            <div class="hero-content display-flex">
+                <div class="hero-icon">
+                    <span class="hero-badge hero-badge-icon">NEW</span>
+                    <img src="images/hero-circle.png" class="hero-circle" alt="">
+                    <img src="images/microphone.png" class="hero-mic" alt="">
+                </div>
 
+                <h1 class="hero-title">TechWave</h1>
+                <p class="hero-subtitle">    
+                    Your daily dose of tech insights, productivity hacks, and personal growth
+                </p>
+                
+                <div class="hero-buttons">
+                    <button class="btn btn-primary">
+                        <img src="images/spotify.png">Listen On Spotify
+                    </button>
+
+                    <button class="btn btn-outline">
+                        <img src="images/message.png">Subscribe
+                    </button>
+                </div>
+
+             </div>
         </section>
+
+        <!-- about section -->
+        <section class="about-section bg-dark">
+            <div class="about-container">
+                <h2 class="about-title text-white">About The Podcast</h2>
+                <p class="about-text text-white">
+                TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                We break down complex topics into digestible insights, explore productivity strategies
+                that actually work, and share stories of personal growth from industry leaders.
+                </p>
+
+                <p class="about-text text-white">
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                </p>
+
+                <div class="about-divider "></div>
+                <div class="about-info display-flex">
+                <div class="info-item">
+                    <h3>150K+</h3>
+                    <p>MONTHLY LISTENERS</p>
+                </div>
+
+                <div class="info-item">
+                    <h3>200+</h3>
+                    <p>EPISODES PUBLISHED</p>
+                </div>
+
+                <div class="info-item">
+                    <h3>4.9 <i class="fa-solid fa-star"></i></h3>
+                    <p>AVERAGE RATING</p>
+                </div>
+
+                <div class="info-item">
+                    <h3>50+</h3>
+                    <p>INDUSTRY EXPERTS</p>
+                </div>
+            </div>
+        </section>
+
         <!-- TechWave section -->
         <section>
 
