--- a/index.html
+++ b/index.html
@@ -93,9 +93,53 @@
             </div>
         </section>
 
-        <!-- TechWave section -->
-        <section>
+        <!-- why choose section -->
 
+        <section class="why-section bg-light">
+            <h2 class="why-title text-white">Why Choose TechWave</h2>
+            <div class="why-container">
+                <div class="why-card premium">
+                    <img src="images/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>
+                        Experience crystal-clear sound with <br>professional-grade recording <br>equipment and expert audio <br>
+                        engineering. Every episode is mastered <br> for optimal listening across all devices <br> and platforms.
+                    </p>
+                </div>
+
+                <div class="why-card mobile">
+                    <img src="images/device.png" alt="">
+                    <h3>Mobile Friendly</h3>
+                    <p>
+                    Listen on the go with seamless mobile experience and offline downloads.
+                    </p>
+                </div>
+
+                <div class="why-card global">
+                    <img src="images/location.png" alt="">
+                    <h3>Global Community</h3>
+                    <p>
+                    Connect with tech enthusiasts from over 120 countries worldwide.
+                    </p>
+                </div>
+
+                <div class="why-card exclusive">
+                    <img src="images/zap-fast.png" alt="">
+                    <h3>Exclusive Interviews</h3>
+                    <p>
+                    Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host <br>secures exclusive conversations you won't find anywhere else, diving deep into their <br> journeys, failures, and success strategies.
+                    </p>
+                </div>
+
+                <div class="why-card resources">
+                    <img src="images/resource.png" alt="">
+                    <h3>Rich Resources</h3>
+                    <p>
+                    Access show notes, transcripts, and <br> additional learning materials for every <br> episode.
+                    </p>
+                </div>
+
+            </div>
         </section>
         <!-- Featured section -->
         <section>
