--- a/index.html
+++ b/index.html
@@ -142,9 +142,67 @@
             </div>
         </section>
         <!-- Featured section -->
-        <section>
+        <section class="featured-section bg-dark text-white">
+            <h2 class="section-title text-white">Featured Episodes</h2>
 
-        </section>
+                <div class="featured-container">
+                <!-- episode 1 -->
+                    <div class="episode-card">
+                        <div class="video-wrapper">
+                            <iframe src="https://www.youtube.com/embed/q6fq4_uP7aM" title="YouTube video" frameborder="0" allowfullscreen>
+                            </iframe>
+                        </div>
+
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>
+                                Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.
+                            </p>
+
+                            <span class="episode-time">
+                                <img src="images/clock.png" alt=""> 42 min
+                            </span>
+                    </div>
+
+                <!-- episode 2 -->
+                    <div class="episode-card">
+                        <div class="video-wrapper">
+                            <iframe src="https://www.youtube.com/embed/CRraHg4Ks_g" title="YouTube video"
+                            frameborder="0" allowfullscreen>
+                            </iframe>
+                        </div>
+
+                        <h3>Building Better Habits for Remote Work</h3>
+                        <p>
+                            Practical strategies for staying productive while working remotely.
+                        </p>
+
+                        <span class="episode-time">
+                            <img src="images/clock.png" alt=""> 35 min
+                        </span>
+                    </div>
+
+                <!-- episode 3 -->
+                    <div class="episode-card">
+                        <div class="video-wrapper">
+                            <iframe src="https://www.youtube.com/embed/Rni7Fz7208c"
+                    title="YouTube video"
+                    frameborder="0"
+                    allowfullscreen>
+                </iframe>
+            </div>
+
+            <h3>Career Growth in Tech: A Roadmap</h3>
+            <p>
+                Expert advice on navigating your tech career journey.
+            </p>
+
+            <span class="episode-time">
+                <img src="images/clock.png" alt=""> 51 min
+            </span>
+        </div>
+
+    </div>
+</section>
         <!-- Host section -->
          <section>
 
