added host section

--- a/index.html
+++ b/index.html
@@ -184,35 +184,64 @@
                 <!-- episode 3 -->
                     <div class="episode-card">
                         <div class="video-wrapper">
-                            <iframe src="https://www.youtube.com/embed/Rni7Fz7208c"
-                    title="YouTube video"
-                    frameborder="0"
-                    allowfullscreen>
-                </iframe>
-            </div>
+                            <iframe src="https://www.youtube.com/embed/Rni7Fz7208c" title="YouTube video"
+                            frameborder="0" allowfullscreen>
+                            </iframe>
+                        </div>
 
-            <h3>Career Growth in Tech: A Roadmap</h3>
-            <p>
-                Expert advice on navigating your tech career journey.
-            </p>
+                            <h3>Career Growth in Tech: A Roadmap</h3>
+                            <p>
+                            Expert advice on navigating your tech career journey.
+                            </p>
 
-            <span class="episode-time">
-                <img src="images/clock.png" alt=""> 51 min
-            </span>
-        </div>
+                            <span class="episode-time">
+                                <img src="images/clock.png" alt=""> 51 min
+                            </span>
+                    </div>
 
-    </div>
-</section>
+                </div>
+        </section>
         <!-- Host section -->
-         <section>
+        <section class="host-section bg-dark">
+            <h2 class="section-title text-white">Meet The Host</h2>
 
-         </section>
+            <div class="host-card">
+                <img src="images/host.png" alt="Host">
+
+                <div class="host-info">
+                    <h3>Alex Kumar</h3>
+                    <p>
+                    Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,<br> working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and <br> practical advice for anyone looking to grow in tech.
+
+                    <div class="host-social">
+                        <div class="social-circle">
+                            <img src="images/linkedin.png" alt="">
+                        </div>
+
+                        <div class="social-circle">
+                            <img src="images/x.png" alt="">
+                        </div>
+
+                        <div class="social-circle">
+                            <img src="images/instagram.png" alt="">
+                        </div>
+
+                        <div class="social-circle">
+                            <img src="images/youtube.png" alt="">
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
          <!-- footer section -->
-          <footer>
+        <footer>
 
-          </footer>
+        </footer>
 
 </body>
 </html>
