--- a/index.html
+++ b/index.html
@@ -235,13 +235,40 @@
                 </div>
             </div>
         </section>
-
     </main>
-
          <!-- footer section -->
-        <footer>
+        <footer class="tw-footer">
+            <img src="images/footer-bg.png" alt="" class="tw-footer-bg">
 
+            <div class="tw-footer-content">
+                <img class="footer-logo" src="images/navbarlogo.png.png" alt="">
+                    <div class="tw-footer-platforms">
+                        <div class="tw-platform">
+                            <img src="images/spotify.png" alt="">
+                            <span>Spotify</span>
+                        </div>
+
+                    <div class="tw-platform">
+                        <img src="images/apple-podcast.png" alt="">
+                        <span>Apple Podcasts</span>
+                    </div>
+
+                    <div class="tw-platform">
+                        <img src="images/youtube-podcast.png" alt="">
+                        <span>YouTube</span>
+                    </div>
+
+                    <div class="tw-platform">
+                        <img src="images/twitter.png" alt="">
+                        <span>Twitter</span>
+                    </div>
+                </div>
+
+                <p class="tw-footer-copy">
+                &copy; 2026 TechWave Podcast. All rights reserved.
+                </p>
+
+            </div>
         </footer>
-
-</body>
+    </body>
 </html>
