added animation in why choose

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>TechWave</title>
 
     <link rel="stylesheet" href="styles/techwave.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
 </head>
 <body class="inter-font">
@@ -173,7 +175,7 @@
 
                         <h3>Building Better Habits for Remote Work</h3>
                         <p>
-                            Practical strategies for staying productive while working remotely.
+                            Practical strategies for staying productive and maintaining work-life balance in a remote environment.
                         </p>
 
                         <span class="episode-time">
@@ -191,7 +193,7 @@
 
                             <h3>Career Growth in Tech: A Roadmap</h3>
                             <p>
-                            Expert advice on navigating your tech career journey.
+                            Expert advice on navigating your tech career from junior developer to senior leadership roles.
                             </p>
 
                             <span class="episode-time">
